--- a/src/components/Chatbot.css
+++ b/src/components/Chatbot.css
@@ -33,23 +33,36 @@
   gap: 20px;
 }
 
-.chatbot-message {
-  padding: 20px;
-  border-radius: 10px;
+.message-container {
   max-width: 70%;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
+.chatbot-message {
+  border-radius: 10px;
+  padding: 20px;
   text-align: justify;
+}
+
+.message-container.user {
+  align-self: flex-end;
+  flex-direction: row-reverse;
+}
+
+.message-container.bot {
+  align-self: flex-start;
 }
 
 .chatbot-message.user {
   background-color: #666;
   color: #fff;
-  align-self: flex-end;
 }
 
 .chatbot-message.bot {
   background-color: #444;
   color: #fff;
-  align-self: flex-start;
 }
 
 .chatbot-input {
